fixed width of navbar and footer not covering entire viewport width, added navbar blur effect

--- a/src/app/styles/footer.module.css
+++ b/src/app/styles/footer.module.css
@@ -4,7 +4,7 @@
     font-weight: 100;
     padding: 2rem;
     font-size: 0.85rem;
-    width: 100%;
+    width: 100vw;
 }
 /* set text opacity in footer to 0.8 */
 .footerSection p {
