--- a/src/app/styles/navbar.module.css
+++ b/src/app/styles/navbar.module.css
@@ -8,6 +8,11 @@
     padding: 1rem 2rem;
     background-color: var(--white);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100vw;
+    overflow-x: hidden;
+
+    background: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
 }
 
 .links {
